--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1312</width>
+    <width>1870</width>
     <height>823</height>
    </rect>
   </property>
@@ -28,9 +28,9 @@
    <widget class="QCustomPlot" name="tx1" native="true">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>20</x>
       <y>360</y>
-      <width>541</width>
+      <width>451</width>
       <height>331</height>
      </rect>
     </property>
@@ -38,9 +38,9 @@
    <widget class="QCustomPlot" name="tx2" native="true">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>20</x>
       <y>20</y>
-      <width>541</width>
+      <width>451</width>
       <height>281</height>
      </rect>
     </property>
@@ -48,9 +48,9 @@
    <widget class="QCustomPlot" name="x1x2" native="true">
     <property name="geometry">
      <rect>
-      <x>690</x>
+      <x>480</x>
       <y>20</y>
-      <width>551</width>
+      <width>431</width>
       <height>281</height>
      </rect>
     </property>
@@ -58,9 +58,9 @@
    <widget class="QTableWidget" name="table">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>361</y>
-      <width>531</width>
+      <x>920</x>
+      <y>360</y>
+      <width>381</width>
       <height>331</height>
      </rect>
     </property>
@@ -68,7 +68,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>80</x>
       <y>710</y>
       <width>91</width>
       <height>31</height>
@@ -87,7 +87,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>350</x>
       <y>710</y>
       <width>91</width>
       <height>31</height>
@@ -106,7 +106,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>840</x>
+      <x>580</x>
       <y>710</y>
       <width>251</width>
       <height>31</height>
@@ -125,7 +125,7 @@
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>160</x>
       <y>710</y>
       <width>131</width>
       <height>41</height>
@@ -140,7 +140,7 @@
    <widget class="QTextEdit" name="textEdit_2">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>420</x>
       <y>710</y>
       <width>131</width>
       <height>41</height>
@@ -150,10 +150,59 @@
    <widget class="QTextEdit" name="textEdit_3">
     <property name="geometry">
      <rect>
-      <x>1090</x>
+      <x>790</x>
       <y>710</y>
       <width>131</width>
       <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QCustomPlot" name="localErrPlot" native="true">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>20</y>
+      <width>381</width>
+      <height>281</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>950</x>
+      <y>710</y>
+      <width>51</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>ОЛП:</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="textEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>1000</x>
+      <y>710</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QCustomPlot" name="stepPlot" native="true">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>360</y>
+      <width>431</width>
+      <height>331</height>
      </rect>
     </property>
    </widget>
@@ -163,8 +212,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1312</width>
-     <height>30</height>
+     <width>1870</width>
+     <height>26</height>
     </rect>
    </property>
   </widget>
